--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "assertion-tools": "^2.1.0",
         "axios": "^0.27.2",
         "dkg-evm-module": "^4.3.3",
+        "dkg.js": "^8.0.0-alpha.0",
+        "dotenv": "^16.4.5",
         "ethers": "^6.1.0",
         "jsonld": "^8.1.0",
         "web3": "^1.7.3"
